gke-gateway/external-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway-gke
spec:
  addresses:
  - type: NamedAddress
    value: ip-ext-ingress-gke # Use your IP Address
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: asm-gateway  # Allow routes from asm-gateway namespace
    name: http
    port: 80
    protocol: HTTP
---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: simple-http-route
#   namespace: my-mesh  # Should be in the same namespace as the service
# spec:
#   parentRefs:
#   - name: external-gateway-gke # Refers to the Gateway
#     namespace: default
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /
#     backendRefs:
#     - name: simple-http-service
#       port: 80

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-route-to-istio
  namespace: asm-gateway  # Same namespace as your Istio Ingress Gateway
spec:
  parentRefs:
  - name: external-gateway-gke
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: istio-ingressgateway  # Your Istio Ingress Gateway service
      port: 80
